<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    tools:context=".TeamEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/toolbar_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar">
        <ToggleButton
            android:id="@+id/toggleButtonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/toggleButton"/>
        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/save"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:background="#FCFCE3"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtName"
                android:text="@string/name"
                android:textSize="24dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etName"
                android:layout_marginStart="16dp"
                android:inputType="textPersonName"
                android:hint="@string/enter_name"
                android:textSize="24dp"
                app:layout_constraintTop_toBottomOf="@id/txtName"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageButton
                android:id="@+id/imageTeam"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/photoicon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtCity"
                android:text="@string/city"
                android:textSize="24dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etName"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etCity"
                android:textSize="24dp"
                android:layout_marginStart="16dp"
                android:inputType="textPersonName"
                android:hint="@string/enter_city"
                app:layout_constraintTop_toBottomOf="@id/txtCity"
                app:layout_constraintStart_toStartOf="parent"/>


            <TextView
                android:id="@+id/textCell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="24dp"
                android:text="@string/cell_phone"
                app:layout_constraintStart_toStartOf="@+id/etCity"
                app:layout_constraintTop_toBottomOf="@+id/etCity" />

            <EditText
                android:id="@+id/editCell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:textSize="24dp"
                android:imeOptions="actionNext"
                android:inputType="phone"
                app:layout_constraintTop_toBottomOf="@id/textCell"
                app:layout_constraintStart_toStartOf="@+id/textCell" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/ratingBar"
                app:layout_constraintTop_toBottomOf="@id/editCell">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtView_rating"
                    android:text="@string/rating"
                    android:layout_marginStart="16dp"
                    android:textSize="24dp"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtRating"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:textSize="24dp"
                    app:layout_constraintStart_toEndOf="@id/txtView_rating"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnRating"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toEndOf="@id/txtRating"
                    android:text="@string/rate">
                </Button>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnGeo"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/geo"
                    app:layout_constraintStart_toEndOf="@id/btnRating">
                </Button>


            </androidx.appcompat.widget.LinearLayoutCompat>



            <fragment
                android:id="@+id/map1"
                class="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar"/>

            <RadioGroup
                android:id="@+id/radioGroupMapType1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/map1"
                app:layout_constraintTop_toTopOf="@+id/map1">

                <RadioButton
                    android:id="@+id/radioButtonNormal1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Normal" />

                <RadioButton
                    android:id="@+id/radioButtonSatellite1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Satellite" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <include layout="@layout/navbar"/>

</androidx.constraintlayout.widget.ConstraintLayout>