<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_cornflowerblue"
    android:id="@+id/activity_team_map"
    tools:context=".TeamMapActivity">

    <!-- XML for first part of chapter -->
    <TextView
        android:id="@+id/textAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Address:"
        android:textSize="24dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:text="240 W Murdock Ave"
        android:ems="14"
        android:textSize="24dp"
        android:maxLength="25"
        android:textColor="@color/white"
        android:inputType="textCapWords"
        android:hint="Enter Street Address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAddress"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/editCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Oshkosh"
        android:ems="8"
        android:hint="City"
        android:textSize="24dp"
        android:textColor="@color/white"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:nextFocusDown="@id/editState"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAddress" />

    <EditText
        android:id="@+id/editState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:text="WI"
        android:textSize="24dp"
        android:textColor="@color/white"
        android:ems="2"
        android:hint="State"
        android:inputType="textCapCharacters"
        android:maxLength="2"
        android:nextFocusDown="@id/editZipcode"
        app:layout_constraintStart_toEndOf="@+id/editCity"
        app:layout_constraintTop_toBottomOf="@+id/editAddress" />

    <EditText
        android:id="@+id/editZipcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:text="54901"
        android:ems="5"
        android:textSize="24dp"
        android:textColor="@color/white"
        android:hint="Zipcode"
        android:inputType="number"
        android:maxLength="5"
        app:layout_constraintStart_toEndOf="@+id/editState"
        app:layout_constraintTop_toBottomOf="@+id/editAddress" />

    <Button
        android:id="@+id/buttonGetLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Get Coordinates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCity" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/save"
        app:layout_constraintStart_toEndOf="@id/buttonGetLocation"
        app:layout_constraintTop_toTopOf="@+id/buttonGetLocation" />

    <TextView
        android:id="@+id/tvLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16dp"
        android:textColor="@color/white"
        android:text="@string/latitude"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGetLocation" />

    <TextView
        android:id="@+id/tvLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/longitude"
        android:textSize="16dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/textLatitude"
        app:layout_constraintTop_toTopOf="@+id/tvLatitude" />

    <TextView
        android:id="@+id/textLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="None"
        android:textSize="16dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@+id/tvLatitude"
        app:layout_constraintStart_toEndOf="@+id/tvLatitude" />

    <TextView
        android:id="@+id/textLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="None"
        android:textSize="16dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@+id/tvLatitude"
        app:layout_constraintStart_toEndOf="@+id/tvLongitude" />

    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLatitude"/>

    <RadioGroup
        android:id="@+id/radioGroupMapType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/map"
        app:layout_constraintTop_toTopOf="@+id/map">

        <RadioButton
            android:id="@+id/radioButtonNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Normal" />

        <RadioButton
            android:id="@+id/radioButtonSatellite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Satellite" />
    </RadioGroup>
    <include layout="@layout/navbar" />
</androidx.constraintlayout.widget.ConstraintLayout>